--- a/httpd/config.json
+++ b/httpd/config.json
@@ -7,8 +7,8 @@
     "url": "../htdocs/assets/css/styles.css",
     "type": "text/css"
   },
-  "/SokobanClone_byVellidragon.png": {
-    "url": "../htdocs/assets/png/SokobanClone_byVellidragon.png",
-    "type": "text/css"
+  "/sokoban.js": {
+    "url": "../htdocs/js/sokoban.js",
+    "type": "text/javascript"
   }
 }
